<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/taxTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tax"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/taxText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text"
        android:textSize="16sp"
        android:gravity="center" />

    <Button
        android:id="@+id/okTaxBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok_"
        android:layout_marginTop="20dp" />
</LinearLayout>

